add native highL support to cliklike_camspec (not tested yet)

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,6 +1,12 @@
 #clik likelihood file, when compiling with cliklike
 clik_likefile = %DATASETDIR%clik/CAMspec_5.2dust_ACTSPT.clik
 
+#if with calclik_CamSpec
+use_highL = T
+use_CAMspec = T
+
+highL_data_dir = %DATASETDIR%highL/
+
 DEFAULT(CAMspec_defaults.ini)
 
 #CAMspec nuisance parameters
