added use_tau_prior option to fake WMAP low L quickly

--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -17,7 +17,11 @@ INCLUDE(batch1/CAMspec_defaults.ini)
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
 cmb_numdatasets = 1
 cmb_dataset1 = WMAP
-#%DATASETDIR%Planck.dataset
+
+#can use this instead of WMAP for much quicker likelihood with only fast parameters
+use_tau_prior =F
+tau_prior_mean=0.09
+tau_prior_std=0.015
 
 #filename for supernovae (default SDSS compilation)
 SN_filename = %DATASETDIR%supernovae.dataset
