use_tau_prior (off) in .ini

--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -18,7 +18,7 @@ INCLUDE(batch1/CAMspec_defaults.ini)
 cmb_numdatasets = 1
 cmb_dataset1 = WMAP
 
-#can use this instead of WMAP for much quicker likelihood with only fast parameters
+#can use this instead of WMAP for much quicker likelihood without similar effect
 use_tau_prior =F
 tau_prior_mean=0.09
 tau_prior_std=0.015
