added prior[xxx] inputs for Gaussian parameter priors, remove use_BBN, use_tau_prior

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,7 +1,7 @@
 #clik likelihood file, when compiling with cliklike
 clik_likefile = %DATASETDIR%clik/CAMspec_5.2dust_ACTSPT.clik
 
-#if with calclik_CamSpec
+#if with cliklike_CamSpec
 use_highL = T
 use_CAMspec = T
 
