--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -115,7 +115,7 @@ rand_seed =
 #If true, generate checkpoint files and terminated runs can be restarted using exactly the same command
 #and chains continued from where they stopped
 #With checkpoint=T note you must delete all chains/file_root.* files if you want new chains with an old file_root
-checkpoint = F
+checkpoint = T
 
 #whether to stop on CAMB error, or continue ignoring point
 stop_on_error=  T
