--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -28,7 +28,10 @@ ignore_rows = 0.3
 #if T produced B&W printer friendly output
 B&W = F
 #version of MatLab you are using
-matlab_version = 7
+#matlab_version = 7
+
+matlab_subplot_size_inch = 4.0
+matlab_plot_output = eps
 
 #Switches; auto_label labels all parameters by their number
 no_plots = F
@@ -112,6 +115,9 @@ limits[cibr]= 0 1
 limits[xi] = 0 1
 limits[aksz] =  0 5
 limits[psr]= N 1
+#highL
+limits[r_ps_spt_95x150]= N 1
+limits[r_ps_150x220]=N 1
 
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
