--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -3,7 +3,6 @@ use_clik = T
 
 use_HST = F
 use_mpk = F
-use_BBN = F
 use_SN = F
 
 use_lya = F
@@ -11,17 +10,12 @@ use_clusters = F
 use_min_zre = 0
 
 
-INCLUDE(batch1/CAMspec_defaults.ini)
+INCLUDE(CAMspec_defaults.ini)
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
 cmb_numdatasets = 1
 cmb_dataset1 = WMAP
-
-#can use this instead of WMAP for much quicker likelihood without similar effect
-use_tau_prior =F
-tau_prior_mean=0.09
-tau_prior_std=0.015
 
 #filename for supernovae (default SDSS compilation)
 SN_filename = %DATASETDIR%supernovae.dataset
