re-centered default input centers and widths

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -11,25 +11,29 @@ DEFAULT(CAMspec_defaults.ini)
 
 #CAMspec nuisance parameters
 #Steven&Antony, updated with Erminia's prior ranges for common CAMspec and ACT/SPT nuisance paramters
-param[acib217]= 55.5 0 100 5 5
-param[xi] = .2 0 .5 .2 .2
-param[aksz] = 2 0 10 .7 .5
+param[acib217]= 60 0 100 5 5
+param[aksz] = 1 0 10 .5 .5
+
+param[acib143]= 3.4 0 20 0.7 0.7
+param[asz143]= 0.9 0 3 .3 0.3
+param[cibr]= 0.95 0.0 1.0 0.04 0.04
+param[xi] = .1 0 1 .1 .1
 
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
 param[A_sz_AS] = 0 0 0 0 0
 param[A_ksz_AS] = 0 0 0 0 0
 param[xi_sz_cib_AS] = 0 0 0 0 0
-param[a_ps_act_148] = 9 0 30 1 1
-param[a_ps_act_217] = 90 0 200 10 5
-param[a_ps_spt_95] =  9 0 30 1 1
-param[a_ps_spt_150] = 9 0 30 1 1
-param[a_ps_spt_220] = 90 0 200 10 5
+param[a_ps_act_148] = 10 0 30 0.6 0.6
+param[a_ps_act_217] = 75 0 200 4 4
+param[a_ps_spt_95] =  6 0 30 1 1
+param[a_ps_spt_150] = 9 0 30 0.5 0.5
+param[a_ps_spt_220] = 70 0 200 4 4
 param[A_cib_143_AS] = 0 0 0 0 0
 param[A_cib_217_AS] = 0 0 0 0 0
-param[r_ps_spt_95x150] =  0.98 0 1.0 0.1 0.1
-param[r_ps_spt_95x220] = 0.98 0 1.0 0.1 0.1
-param[r_ps_150x220] = 0.98 0 1.0 0.1 0.1
+param[r_ps_spt_95x150] =  0.75 0 1.0 0.1 0.1
+param[r_ps_spt_95x220] = 0.55 0 1.0 0.1 0.1
+param[r_ps_150x220] = 0.94 0 1.0 0.02 0.02
 param[r_cib_AS] = 0 0 0 0 0
 param[cal_acts_148] = 1.00 0.8 1.3 0.01 0.01
 param[cal_acts_217] = 1.00 0.8 1.3 0.01 0.01
