--- a/batch1/fast_approx.ini
+++ b/batch1/fast_approx.ini
@@ -1,4 +1,4 @@
-#this is not an approx, but may not help much
+#this is not an approx, and actually likely to be slower
 #use_fast_slow = T
 
 #only compute to lmax=3100, fit rest by scaling template
@@ -12,3 +12,6 @@ prior[tau]= 0.09 0.015
 
 #neglect small neutrino mass
 param[mnu] = 0 0 0 0 0
+
+#mimic highL data
+#prior[acib143] = 0.3493002E+01  0.7999811E+00
