readme_planck.html; moved around  and set up lmax_computed_cl

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -7,6 +7,8 @@ use_CAMspec = T
 
 highL_data_dir = %DATASETDIR%highL/
 
+lmax_computed_cl = 4500
+
 DEFAULT(CAMspec_defaults.ini)
 
 #CAMspec nuisance parameters
