--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -8,6 +8,7 @@ sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
 kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 
+lmax_computed_cl = 2500
 
 DEFAULT(all_likelihoods_fixed.ini)
 
