--- a/batch1/PLik_ACTSPT_defaults.ini
+++ b/batch1/PLik_ACTSPT_defaults.ini
@@ -3,6 +3,8 @@ clik_likefile = %DATASETDIR%clik/plik_dx9_v2_ACTSPT.clik
 
 DEFAULT(PLik_defaults.ini)
 
+lmax_computed_cl = 4500
+
 #PLik nuisance parameters
 param[A_cib_143] = 5 0 20 1 1
 param[A_cib_217] = 70 0 100 5 1
