--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -3,6 +3,10 @@ clik_likefile = %DATASETDIR%clik/plik_dx9_v2.clik
 
 DEFAULT(all_likelihoods_fixed.ini)
 
+#don't know what this should be..
+lmax_computed_cl = 3100
+
+
 #PLik nuisance parameters
 param[A_cib_143] = 20 0 50 1 1
 param[A_cib_217] = 50 0 120 1 1
