covmat renamed consistently, python options

--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -101,13 +101,16 @@ directional_grid_steps = 20
 #action = 0:  MCMC, action=1: postprocess .data file, action=2: find best fit point only
 action = 0
 
+
 #If propose_matrix is blank (first run), can try to use numerical Hessian to 
 #estimate a good propose matrix. As a byproduct you also get an approx best fit point
 estimate_propose_matrix = F
 
+dense_minimization_points = T
+
 #when estimating best fit point (action=2 or estimate_propose_matrix), 
 #required relative accuracy of each parameter in units of the propose width
-max_like_radius = 0.01
+max_like_radius = 0.005
 
 #if blank this is set from system clock
 rand_seed = 
