--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -30,3 +30,9 @@ mpk_dataset1 = %DATASETDIR%sdss_lrgDR4.dataset
 nonlinear_pk = F
 
 use_Age_Tophat_Prior = T
+
+#filenames for BAO data sets
+bao_numdatasets = 3
+bao_dataset1 = data/sdss_DR9_bao.dataset.dataset
+bao_dataset2 = data/sdss_DR7_bao.dataset.dataset
+bao_dataset3 = data/sdss_6DF_bao.dataset.dataset
