default BAO data fix

--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -4,6 +4,7 @@ use_clik = T
 use_HST = F
 use_mpk = F
 use_SN = F
+use_BAO=F
 
 use_lya = F
 use_clusters = F
@@ -33,6 +34,6 @@ use_Age_Tophat_Prior = T
 
 #filenames for BAO data sets
 bao_numdatasets = 3
-bao_dataset1 = data/sdss_DR9_bao.dataset.dataset
-bao_dataset2 = data/sdss_DR7_bao.dataset.dataset
-bao_dataset3 = data/sdss_6DF_bao.dataset.dataset
+bao_dataset1 = data/sdss_DR9_bao.dataset
+bao_dataset2 = data/sdss_DR7_bao.dataset
+bao_dataset3 = data/sdss_6DF_bao.dataset
