added large many parameter covmats; moved old covmats; python tidies

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -9,6 +9,10 @@ highL_data_dir = %DATASETDIR%highL/
 
 lmax_computed_cl = 4500
 
+#this contains most of the standard parameters so can be used with various different runs
+propose_matrix = planck_CAMspec_highL_merged.covmat
+
+
 DEFAULT(CAMspec_defaults.ini)
 
 #CAMspec nuisance parameters
