--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -10,6 +10,10 @@ kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 
 lmax_computed_cl = 2500
 
+
+#this contains most of the standard parameters so can be used with various different runs
+propose_matrix = planck_CAMspec_merged.covmat
+
 DEFAULT(all_likelihoods_fixed.ini)
 
 #CAMspec nuisance parameters
