--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -7,6 +7,9 @@ DEFAULT(all_likelihoods_fixed.ini)
 lmax_computed_cl = 3100
 
 
+#this contains most of the standard parameters so can be used with various different runs
+propose_matrix = planck_PLik.covmat
+
 #PLik nuisance parameters
 param[A_cib_143] = 20 0 50 1 1
 param[A_cib_217] = 50 0 120 1 1
