updated for use with v4.1 likelihoods

--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -14,6 +14,8 @@ propose_matrix = planck_PLik.covmat
 param[A_cib_143] = 20 0 50 1 1
 param[A_cib_217] = 50 0 120 1 1
 param[r_cib] = .5 0 1 .1 .1
+param[A_sz] = 0.9 0 3 0.3 0.3
+param[xi_sz_cib] = .1 0 1 .1 .1
 param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0.00001 0.00001
 param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0.00001 0.00001
 param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0.00001 0.00001
