changes for two new Plik params

--- a/batch1/all_likelihoods_fixed.ini
+++ b/batch1/all_likelihoods_fixed.ini
@@ -44,6 +44,8 @@ param[bm_4_5] = 0 0 0 0 0
 param[A_cib_143] = 20 0 50 0 0
 param[A_cib_217] = 50 0 120 0 0
 param[r_cib] = .5 0 1 0 0
+param[A_sz] = 0 0 0 0 0
+param[xi_sz_cib] = 0 0 0 0 0
 param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0 0
 param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0 0
 param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0 0
