filenames in CAMspec ini files updated

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,5 +1,5 @@
 #clik likelihood file, when compiling with cliklike
-clik_likefile = %DATASETDIR%clik/CAMspec_5.2dust_ACTSPT.clik
+clik_likefile = %DATASETDIR%clik/CAMspec_v6.2Ndust_ACTSPT.clik
 
 #if with cliklike_CamSpec
 use_highL = T
