--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,5 +1,5 @@
 #clik likelihood file, when compiling with cliklike
-clik_likefile = %DATASETDIR%clik/CAMspec_5.2dust.clik
+clik_likefile = %DATASETDIR%clik/CAMspec_v6.2Ndust.clik
 
 #these only used if compiling with clicklike_CamSpec
 likefile = %DATASETDIR%camspec/like_v6.2Fdust.dat
