separate importance sampling .ini files, etc

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -30,7 +30,12 @@ B&W = F
 #matlab_version = 7
 
 matlab_subplot_size_inch = 4.0
-matlab_plot_output = eps
+matlab_subplot_size_inch2 = 4.0
+matlab_subplot_size_inch3 = 6.0
+
+matlab_plot_output = pdf
+
+line_labels = T
 
 #Switches; auto_label labels all parameters by their number
 no_plots = F
