more python batch filters; w ranges

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -102,7 +102,7 @@ marker[nrun] = 0
 
 #Need to give limits if prior cuts off distribution where not very small
 #limits[tau] = 0.01 N
-limits[w] = -1 N
+#limits[w] = -1 N
 limits[r]= 0 N
 limits[asz] = 0 2
 limits[r02]= 0 N
