basically working;  dragging_steps  input

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -112,7 +112,7 @@ limits[deltazrei]=0.5 2.5
 #camspec
 limits[asz143]=0 3
 limits[acib143]= 0 20
-limits[acib217]= N 80
+#limits[acib217]= N 80
 limits[cibr]= 0 1
 limits[xi] = 0 1
 limits[aksz] =  0 5
