postprocessing re-vamped and working; list restructuring; double precision

--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -21,17 +21,10 @@ temperature = 1
 #Maximum number of chain steps
 samples = 4000000
 
-#use fast-slow parameter distinctions to speed up 
-#(note for basic models WMAP3 code is only ~3x as fast as CAMB)
-use_fast_slow = F
-
 #Scale of proposal relative to covariance; 2.4 is recommended by astro-ph/0405462 for Gaussians
 #If propose_matrix is much broader than the new distribution, make proportionately smaller
 #Generally make smaller if your acceptance rate is too low
-propose_scale = 1.5
-#smaller may help with all the non-Gaussian nuisance parameters
-#propose_scale = 2.4
-
+propose_scale = 2.4
 
 #Increase to oversample fast parameters more, e.g. if space is odd shape
 oversample_fast = 1
@@ -89,8 +82,12 @@ accuracy_level = 1
 high_accuracy_default = T
 
 #1: Simple Metropolis, 2: slice sampling, 3: slice sampling fast parameters, 4: directional gridding
-sampling_method = 1
+#7 is new dragging method
+sampling_method = 7
 
+dragging_steps  = 2
+use_fast_slow = T
+fast_param_index = 21
 
 ##Rest are fairly irrelevant
 
