Likliehood nuisance parameters in separate .paramnames

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -10,11 +10,11 @@ kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 
 lmax_computed_cl = 2500
 
+INCLUDE(WMAP_defaults.ini)
 
 #this contains most of the standard parameters so can be used with various different runs
 propose_matrix = planck_CAMspec_merged.covmat
 
-DEFAULT(all_likelihoods_fixed.ini)
 
 #CAMspec nuisance parameters
 ##Jan's choice
@@ -47,4 +47,25 @@ param[xi] = .2 0 1 .2 .2
 param[aksz] = 1.5 0 5 .7 0.7
 
 param[bm_1_1] = 0.3 -5 5 0.2 0.2
+
+param[bm_1_2] = 0 0 0 0 0
+param[bm_1_3] = 0 0 0 0 0
+param[bm_1_4] = 0 0 0 0 0
+param[bm_1_5] = 0 0 0 0 0
+param[bm_2_1] = 0 0 0 0 0
+param[bm_2_2] = 0 0 0 0 0
+param[bm_2_3] = 0 0 0 0 0
+param[bm_2_4] = 0 0 0 0 0
+param[bm_2_5] = 0 0 0 0 0
+param[bm_3_1] = 0 0 0 0 0
+param[bm_3_2] = 0 0 0 0 0
+param[bm_3_3] = 0 0 0 0 0
+param[bm_3_4] = 0 0 0 0 0
+param[bm_3_5] = 0 0 0 0 0
+param[bm_4_1] = 0 0 0 0 0
+param[bm_4_2] = 0 0 0 0 0
+param[bm_4_3] = 0 0 0 0 0
+param[bm_4_4] = 0 0 0 0 0
+param[bm_4_5] = 0 0 0 0 0
+
 
