--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -1,7 +1,8 @@
 #clik likelihood file
 clik_likefile = %DATASETDIR%clik/plik_dx9_v2.clik
 
-DEFAULT(all_likelihoods_fixed.ini)
+
+INCLUDE(WMAP_defaults.ini)
 
 #don't know what this should be..
 lmax_computed_cl = 3100
