added use_lensing_potential and accuracy tweaks

--- a/batch1/planck_lensing.ini
+++ b/batch1/planck_lensing.ini
@@ -1,5 +1,6 @@
 
 use_nonlinear_lensing = T
+use_lensing_potential = T
 
 #currently non-linear lensing does not correctly go from transfer functions
 #this should ensure transfer functions are re-computed whenever the power spectrum parameters change 
