updated cliklike.f90, highL parameters; not tested yet

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,17 +1,16 @@
 #clik likelihood file, when compiling with cliklike
-clik_likefile = %DATASETDIR%clik/CAMspec_v6.2Ndust_ACTSPT.clik
+clik_data_actspt = %DATASETDIR%clik/actspt_2012_11.clik
+clik_params_actspt = %DATASETDIR%highL.paramnames
 
 #if with cliklike_CamSpec
 use_highL = T
 use_CAMspec = T
-
 highL_data_dir = %DATASETDIR%highL/
 
 lmax_computed_cl = 4500
 
 #this contains most of the standard parameters so can be used with various different runs
 propose_matrix = planck_CAMspec_highL_merged.covmat
-
 
 DEFAULT(CAMspec_defaults.ini)
 
@@ -35,6 +34,10 @@ param[a_ps_spt_220] = 70 0 200 4 4
 param[r_ps_spt_95x150] =  0.75 0 1.0 0.1 0.1
 param[r_ps_spt_95x220] = 0.55 0 1.0 0.1 0.1
 param[r_ps_150x220] = 0.94 0 1.0 0.02 0.02
+param[act_dust_s] = 0.4 -5 5 0.1 0.1
+param[act_dust_e] = 0.8 -5 5 0.1 0.1
+prior[act_dust_s] = 0.4 0.2
+prior[act_dust_e] = 0.8 0.2
 param[cal_acts_148] = 1.00 0.8 1.3 0.01 0.01
 param[cal_acts_217] = 1.00 0.8 1.3 0.01 0.01
 param[cal_acte_148] = 1.00 0.8 1.3 0.01 0.01
