--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,5 +1,6 @@
 #clik likelihood file, when compiling with cliklike
-clik_likefile = %DATASETDIR%clik/CAMspec_v6.2Ndust.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TNdust_newbeam.clik
+clik_params_camspec = %DATASETDIR%camspec.paramnames
 
 #these only used if compiling with clicklike_CamSpec
 likefile = %DATASETDIR%camspec/like_v6.2Fdust.dat
@@ -10,11 +11,8 @@ kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 
 lmax_computed_cl = 2500
 
-INCLUDE(WMAP_defaults.ini)
-
 #this contains most of the standard parameters so can be used with various different runs
 propose_matrix = planck_CAMspec_merged.covmat
-
 
 #CAMspec nuisance parameters
 
