--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -1,8 +1,7 @@
 #clik likelihood file
-clik_likefile = %DATASETDIR%clik/plik_dx9_v2.clik
 
-
-INCLUDE(WMAP_defaults.ini)
+clik_data_plik = %DATASETDIR%clik/plik_dx9_v4N.clik
+clik_params_plik = %DATASETDIR%plik.paramnames
 
 #don't know what this should be..
 lmax_computed_cl = 3100
