--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -12,11 +12,7 @@ use_min_zre = 0
 
 
 INCLUDE(CAMspec_defaults.ini)
-
-#filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
-#Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
-cmb_numdatasets = 1
-cmb_dataset1 = WMAP
+INCLUDE(WMAP_defaults.ini)
 
 #filename for supernovae (default SDSS compilation)
 SN_filename = %DATASETDIR%supernovae.dataset
