added speed clik params

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,6 +1,7 @@
 #clik likelihood file, when compiling with cliklike
 clik_data_actspt = %DATASETDIR%clik/actspt_2012_11.clik
 clik_params_actspt = %DATASETDIR%highL.paramnames
+clik_speed_actspt = 1
 
 #if with cliklike_CamSpec
 use_highL = T
