--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -12,7 +12,7 @@ use_min_zre = 0
 
 
 INCLUDE(CAMspec_defaults.ini)
-INCLUDE(WMAP_defaults.ini)
+INCLUDE(planck_lowl_defaults.ini)
 
 #filename for supernovae (default SDSS compilation)
 SN_filename = %DATASETDIR%supernovae.dataset
