added clik lensing

--- a/batch1/planck_lensing.ini
+++ b/batch1/planck_lensing.ini
@@ -1,4 +1,7 @@
 
+clik_data_lensing = %DATASETDIR%clik/lensing_likelihood_v1.1.clik_lensing
+clik_speed_lensing = -1
+
 use_nonlinear_lensing = T
 use_lensing_potential = T
 
