--- a/batch1/lensing.ini
+++ b/batch1/lensing.ini
@@ -8,3 +8,6 @@ use_lensing_potential = T
 #currently non-linear lensing does not correctly go from transfer functions
 #this should ensure transfer functions are re-computed whenever the power spectrum parameters change 
 block_semi_fast = F
+
+redo_theory = T
+redo_cls = T
