positivity prior on dust

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -120,7 +120,7 @@ limits[psr]= N 1
 #highL
 limits[r_ps_spt_95x150]= N 1
 limits[r_ps_150x220]=N 1
-
+limits[act_dust_s]=0 N
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
