getdist triangle plots with specific parameters (makes getdist much faster is restricted); removed sm support

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -84,6 +84,7 @@ num_3D_plots = 1
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
+triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam sigma8
 
 #e.g. colormap('jet')
 matlab_colscheme =
@@ -91,9 +92,6 @@ matlab_colscheme =
 #Parameters to use. If zero use all parameters which have lables.
 plotparams_num = 0
 plotparams = omegabh2 omegadmh2 tau ns
-
-#Get set label to empty to not include a parameter in the parameter_names file
-#lab[asz]=
 
 #marker[x] adds vertical line to MatLab 1D plot
 marker[nrun] = 0
