GetDistPlots.py fairly complete; changes to getdist _single outputs; plik updates for clikv51

--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -4,23 +4,22 @@ clik_data_plik = %DATASETDIR%clik/plik_dx9_v4N.clik
 clik_params_plik = %DATASETDIR%plik.paramnames
 
 #don't know what this should be..
-lmax_computed_cl = 3100
+lmax_computed_cl = 2500
 
 
 #this contains most of the standard parameters so can be used with various different runs
 propose_matrix = planck_PLik.covmat
 
 #PLik nuisance parameters
-param[A_cib_143] = 20 0 50 1 1
-param[A_cib_217] = 50 0 120 1 1
-param[r_cib] = .5 0 1 .1 .1
-param[A_sz] = 0.9 0 3 0.3 0.3
-param[xi_sz_cib] = .1 0 1 .1 .1
-param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_143_143] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_143_217] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_217_217] = 0.0001 0 0.0002 0.00001 0.00001
-param[gal_norm] = 0.0001 0 0.0002 0.00001 0.00001
-
+param[A_cib_143] = 2.8 0 50 1 1
+param[A_cib_217] = 66 0 120 1 1
+param[r_cib] = 0.5 0 1 .1 .1
+param[ps_pwfe_A_100_100] =  180 0 400 5 5
+param[ps_pwfe_A_100_143] =  106 0 400 5 5                        
+param[ps_pwfe_A_100_217] =  67 0 400 5 5                                                                                                           
+param[ps_pwfe_A_143_143] = 70 0 400 5 5                                                                                                          
+param[ps_pwfe_A_143_217] = 58 0 400 5 5                                                                                                           
+param[ps_pwfe_A_217_217] = 72 0 400 5 5                                                                                                               
+param[gal_norm] =0.4660089E-4 0 1e-3 6.64819e-07 6.64819e-07    
+param[A_sz]= 1 0 40 2 2
+param[xi_sz_cib]=0 0 1 0.5 0.5
