--- a/batch1/PLik_ACTSPT_defaults.ini
+++ b/batch1/PLik_ACTSPT_defaults.ini
@@ -1,30 +1,22 @@
 #clik likelihood file
-clik_likefile = %DATASETDIR%clik/plik_dx9_v2_ACTSPT.clik
+clik_likefile = %DATASETDIR%clik/actspt_2012_11.clik
+clik_params_actspt = %DATASETDIR%highL.paramnames
+clik_speed_actspt = 6
 
 DEFAULT(PLik_defaults.ini)
 
 lmax_computed_cl = 4500
 
-#PLik nuisance parameters
-param[A_cib_143] = 5 0 20 1 1
-param[A_cib_217] = 70 0 100 5 1
-
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
-param[A_sz_AS] = 0 0 0 0 0
-param[A_ksz_AS] = 1 0 10 0 0
-param[xi_sz_cib_AS] = 0 0 0 0 0
 param[a_ps_act_148] = 10 0 30 0 0
 param[a_ps_act_217] = 75 0 200 0 0
 param[a_ps_spt_95] =  6 0 30 0 0
 param[a_ps_spt_150] = 9 0 30 0 0
 param[a_ps_spt_220] = 70 0 200 0 0
-param[A_cib_143_AS] = 0 0 0 0 0
-param[A_cib_217_AS] = 0 0 0 0 0
 param[r_ps_spt_95x150] =  0.75 0 1.0 0 0
 param[r_ps_spt_95x220] = 0.55 0 1.0 0 0
 param[r_ps_150x220] = 0.94 0 1.0 0 0
-param[r_cib_AS] = 0 0 0 0 0
 param[cal_acts_148] = 1.00 0.8 1.3 0 0
 param[cal_acts_217] = 1.00 0.8 1.3 0 0
 param[cal_acte_148] = 1.00 0.8 1.3 0 0
