added clik 5.0 files from Jan Hamann

--- a/batch1/PLik_ACTSPT_defaults.ini
+++ b/batch1/PLik_ACTSPT_defaults.ini
@@ -1,36 +1,47 @@
-#clik likelihood file
-clik_likefile = %DATASETDIR%clik/plik_dx9_v2_ACTSPT.clik
+#clik likelihood file, when compiling with cliklike
+clik_numdatasets = 3
+clik_likefile1 = /home/hamann/plonk/clik/data/plik_dx9_v4F.clik
+clik_likefile2 = /home/hamann/plonk/clik/data/actspt_2012_11.clik
+clik_likefile3 = /home/hamann/plonk/clik/data/lowlike_v2.0.clik
+clik_likefile4 = /home/hamann/plonk/clik/data/lensing_likelihood_v1.2.clik_lensing
+
+#Might want to switch on this one when using Planck lensing likelihood
+use_lensing_potential =	F
+#This one really slows things down... 
+use_nonlinear_lensing = F
 
 DEFAULT(PLik_defaults.ini)
 
 lmax_computed_cl = 4500
 
+
 #PLik nuisance parameters
-param[A_cib_143] = 5 0 20 1 1
-param[A_cib_217] = 70 0 100 5 1
+#updated with Erminia's prior ranges for common PLik and ACT/SPT nuisance paramters
+param[acib217]= 60 0 100 5 5
+param[acib143]= 3.4 0 20 0.7 0.7
+param[asz143]= 0.9 0 3 .3 0.3
+param[cibr]= 0.95 0.0 1.0 0.04 0.04
+param[xi] = .1 0 1 .1 .1
+
 
 #ACT/SPT nuisance parameters
-#If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
-param[A_sz_AS] = 0 0 0 0 0
-param[A_ksz_AS] = 1 0 10 0 0
-param[xi_sz_cib_AS] = 0 0 0 0 0
-param[a_ps_act_148] = 10 0 30 0 0
-param[a_ps_act_217] = 75 0 200 0 0
-param[a_ps_spt_95] =  6 0 30 0 0
-param[a_ps_spt_150] = 9 0 30 0 0
-param[a_ps_spt_220] = 70 0 200 0 0
-param[A_cib_143_AS] = 0 0 0 0 0
-param[A_cib_217_AS] = 0 0 0 0 0
-param[r_ps_spt_95x150] =  0.75 0 1.0 0 0
-param[r_ps_spt_95x220] = 0.55 0 1.0 0 0
-param[r_ps_150x220] = 0.94 0 1.0 0 0
-param[r_cib_AS] = 0 0 0 0 0
-param[cal_acts_148] = 1.00 0.8 1.3 0 0
-param[cal_acts_217] = 1.00 0.8 1.3 0 0
-param[cal_acte_148] = 1.00 0.8 1.3 0 0
-param[cal_acte_217] = 1.00 0.8 1.3 0 0
-param[cal_spt_95] = 1.00 0.8 1.3 0 0
-param[cal_spt_150] = 1.00 0.8 1.3 0 0
-param[cal_spt_220] = 1.00 0.8 1.3 0 0
+param[aksz] = 1 0 10 .5 .5
+param[a_ps_act_148] = 10 0 30 0.6 0.6
+param[a_ps_act_217] = 75 0 200 4 4
+param[a_ps_spt_95] =  6 0 30 1 1
+param[a_ps_spt_150] = 9 0 30 0.5 0.5
+param[a_ps_spt_220] = 70 0 200 4 4
+param[r_ps_spt_95x150] =  0.75 0 1.0 0.1 0.1
+param[r_ps_spt_95x220] = 0.55 0 1.0 0.1 0.1
+param[r_ps_150x220] = 0.94 0 1.0 0.02 0.02
+param[a_gs] = 0.4 0 3 0.2 0.2
+param[a_ge] = 0.8 0 3 0.2 0.2
+param[cal_acts_148] = 1.00 0.8 1.3 0.01 0.01
+param[cal_acts_217] = 1.00 0.8 1.3 0.01 0.01
+param[cal_acte_148] = 1.00 0.8 1.3 0.01 0.01
+param[cal_acte_217] = 1.00 0.8 1.3 0.01 0.01
+param[cal_spt_95] = 1.00 0.8 1.3 0.01 0.01
+param[cal_spt_150] = 1.00 0.8 1.3 0.01 0.01
+param[cal_spt_220] = 1.00 0.8 1.3 0.01 0.01
 
 
