--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -1,5 +1,15 @@
 #clik likelihood file
-clik_likefile = %DATASETDIR%clik/plik_dx9_v2.clik
+clik_numdatasets = 2
+
+clik_likefile1 = /home/hamann/plonk/clik/data/plik_dx9_v4F.clik
+clik_likefile2 = /home/hamann/plonk/clik/data/lowlike_v2.0.clik
+clik_likefile3 = /home/hamann/plonk/clik/data/lensing_likelihood_v1.2.clik_lensing
+
+#Might want to switch on this one when using Planck lensing likelihood
+use_lensing_potential =	F
+#This one really slows things down... 
+use_nonlinear_lensing = F
+
 
 DEFAULT(all_likelihoods_fixed.ini)
 
@@ -8,14 +18,15 @@ lmax_computed_cl = 3100
 
 
 #this contains most of the standard parameters so can be used with various different runs
-propose_matrix = planck_PLik.covmat
+propose_matrix = 
+#planck_PLik.covmat
 
 #PLik nuisance parameters
-param[A_cib_143] = 20 0 50 1 1
-param[A_cib_217] = 50 0 120 1 1
-param[r_cib] = .5 0 1 .1 .1
-param[A_sz] = 0.9 0 3 0.3 0.3
-param[xi_sz_cib] = .1 0 1 .1 .1
+param[acib143]= 10 0 20 3 3
+param[acib217]= 55.5 0 80 3 3 
+param[cibr]= 0.63 0.0 1.0 0.2 0.2
+param[asz143]= 2.15 0 3 .6 0.6
+param[xi] = .2 0 1 .2 .2
 param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0.00001 0.00001
 param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0.00001 0.00001
 param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0.00001 0.00001
@@ -23,4 +34,5 @@ param[ps_pwfe_A_143_143] = 0.0001 0 0.0002 0.00001 0.00001
 param[ps_pwfe_A_143_217] = 0.0001 0 0.0002 0.00001 0.00001
 param[ps_pwfe_A_217_217] = 0.0001 0 0.0002 0.00001 0.00001
 param[gal_norm] = 0.0001 0 0.0002 0.00001 0.00001
+
 
