--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -11,11 +11,12 @@ use_clusters = F
 use_min_zre = 0
 
 
-INCLUDE(CAMspec_defaults.ini)
+INCLUDE(CAMspec_ACTSPT_defaults.ini)
+#INCLUDE(PLik_ACTSPT_defaults.ini)
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
-cmb_numdatasets = 1
+cmb_numdatasets = 0
 cmb_dataset1 = WMAP
 
 #filename for supernovae (default SDSS compilation)
