--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,5 +1,15 @@
 #clik likelihood file, when compiling with cliklike
-clik_likefile = %DATASETDIR%clik/CAMspec_v6.2Ndust.clik
+clik_numdatasets = 2
+clik_likefile1 = /home/hamann/plonk/clik/data/CAMspec_v6.2TNdust_newbeam.clik
+clik_likefile2 = /home/hamann/plonk/clik/data/lowlike_v2.0.clik
+clik_likefile3 = /home/hamann/plonk/clik/data/lensing_likelihood_v1.2.clik_lensing
+
+#Might want to switch on this one when using Planck lensing likelihood
+use_lensing_potential =	F
+#This one really slows things down... 
+use_nonlinear_lensing = F
+
+
 
 #these only used if compiling with clicklike_CamSpec
 likefile = %DATASETDIR%camspec/like_v6.2Fdust.dat
@@ -12,29 +22,15 @@ lmax_computed_cl = 2500
 
 
 #this contains most of the standard parameters so can be used with various different runs
-propose_matrix = planck_CAMspec_merged.covmat
+propose_matrix = 
+#planck_CAMspec_merged.covmat
 
 DEFAULT(all_likelihoods_fixed.ini)
 
 #CAMspec nuisance parameters
-##Jan's choice
-#param[aps100] = 20 0 50 .5 .5
-#param[aps143] = 3 0 30 .5 .5
-#param[aps217] = 5 0 30 .5 .5
-#param[acib143] = 18 0 50 .1 .1
-#param[acib217] = 60 0 120 1 1
-#param[asz143] = 2 0 5 .1 .1
-#param[psr] = 0.9 0.0 1.0 0.05 0.05
-#param[cibr] = 0.5 0.0 1.0 0.05 0.05
-#param[cal0] = 1.013 0.98 1.02 0.001 0.001
-#param[cal1] = 1.0 1.0 1.0 0 0
-#param[cal2] = 1.004 0.98 1.02 0.001 0.001
-#param[xi] = 0.05 0 1 0.001 0.001
-#param[aksz] = 2 0 10 .1 .1
-
-param[aps100] = 17 0 40 3 3
-param[aps143]= 6.1 0 30 0.5 0.5
-param[aps217]= 6.2 0 50 0.8 0.8
+param[aps100] = 153 0 360 27 27
+param[aps143]= 54.9 0 270 4.5 4.5
+param[aps217]= 55.8 0 450 7.2 7.2
 param[acib143]= 10 0 20 3 3
 param[acib217]= 55.5 0 80 3 3 
 param[asz143]= 2.15 0 3 .6 0.6
@@ -48,3 +44,22 @@ param[aksz] = 1.5 0 5 .7 0.7
 
 param[bm_1_1] = 0.3 -5 5 0.2 0.2
 
+param[bm_1_2] = 0 0 0 0 0
+param[bm_1_3] = 0 0 0 0 0
+param[bm_1_4] = 0 0 0 0 0
+param[bm_1_5] = 0 0 0 0 0
+param[bm_2_1] = 0 0 0 0 0
+param[bm_2_2] = 0 0 0 0 0
+param[bm_2_3] = 0 0 0 0 0
+param[bm_2_4] = 0 0 0 0 0
+param[bm_2_5] = 0 0 0 0 0
+param[bm_3_1] = 0 0 0 0 0
+param[bm_3_2] = 0 0 0 0 0
+param[bm_3_3] = 0 0 0 0 0
+param[bm_3_4] = 0 0 0 0 0
+param[bm_3_5] = 0 0 0 0 0
+param[bm_4_1] = 0 0 0 0 0
+param[bm_4_2] = 0 0 0 0 0
+param[bm_4_3] = 0 0 0 0 0
+param[bm_4_4] = 0 0 0 0 0
+param[bm_4_5] = 0 0 0 0 0
