--- a/batch1/all_likelihoods_fixed.ini
+++ b/batch1/all_likelihoods_fixed.ini
@@ -40,11 +40,6 @@ param[bm_4_4] = 0 0 0 0 0
 param[bm_4_5] = 0 0 0 0 0
 
 #PLik nuisance parameters
-param[A_cib_143] = 20 0 50 0 0
-param[A_cib_217] = 50 0 120 0 0
-param[r_cib] = .5 0 1 0 0
-param[A_sz] = 0 0 0 0 0
-param[xi_sz_cib] = 0 0 0 0 0
 param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0 0
 param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0 0
 param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0 0
@@ -55,20 +50,16 @@ param[gal_norm] = 0.0001 0 0.0002 0 0
 
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
-param[A_sz_AS] = 1 0 5 0 0
-param[A_ksz_AS] = 1 0 10 0 0
-param[xi_sz_cib_AS] = 0.1 0 1 0 0
 param[a_ps_act_148] = 1 0 3 0 0
 param[a_ps_act_217] = 9 0 20 0 0
 param[a_ps_spt_95] = 1 0 3 0 0
 param[a_ps_spt_150] = 1 0 3 0 0
 param[a_ps_spt_220] = 8 0 20 0 0
-param[A_cib_143_AS] = 3 0 30 0 0
-param[A_cib_217_AS] = 70 0 150 0 0
 param[r_ps_spt_95x150] = .9 0 1 0 0
 param[r_ps_spt_95x220] = .7 0 1 0 0
 param[r_ps_150x220] = .9 0 1 0 0
-param[r_cib_AS] = .5 0 1 0 0
+param[a_gs] = 0.4 0 3 0 0
+param[a_ge] = 0.8 0 3 0 0
 param[cal_acts_148] = 1 .9 1.1 0 0
 param[cal_acts_217] = 1 .9 1.1 0 0
 param[cal_acte_148] = 1 .9 1.1 0 0
