fixed bunch of bugs in limits convergence testing; rearranged parameterization, input H0_min and H0_max parameters

--- a/batch1/params_CMB_defaults.ini
+++ b/batch1/params_CMB_defaults.ini
@@ -7,6 +7,9 @@ inflation_consistency = T
 #Set Y_He from BBN constraint; if false set to fixed value of 0.24 by default.
 bbn_consistency=T 
 
+H0_min=40
+H0_max=100
+
 param[omegabh2] = 0.02225 0.005 0.1 0.0001 0.0002
 param[omegach2] = 0.12 0.001 0.99 0.001 0.002
 param[theta] = 1.0411 0.5 10 0.0004 0.0004
@@ -32,9 +35,6 @@ param[fdm] = 0 0 0 0 0
 param[ns] = 0.96 0.9 1.1 0.004 0.004
 #log[10^10 A_s]
 param[logA] = 3.1 2.7 4 0.001 0.001
-
-#SZ amplitude, as in WMAP analysis
-param[asz]= 0 0 0 0 0
 
 #file used by CAMB
 highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
