generate omegal plots

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -84,7 +84,7 @@ num_3D_plots = 1
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
-triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam sigma8
+triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8
 
 #e.g. colormap('jet')
 matlab_colscheme =
