--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -8,6 +8,7 @@ data_dir = %LOCALDIR%data/
 
 INCLUDE(likelihood_batch1.ini)
 INCLUDE(params_CMB_defaults.ini)
+INCLUDE(multinest.ini)
 
 #Feedback level ( 2=lots,1=chatty,0=none)
 feedback = 2
@@ -99,7 +100,8 @@ sampling_method = 1
 directional_grid_steps = 20
 
 #action = 0:  MCMC, action=1: postprocess .data file, action=2: find best fit point only
-action = 0
+#action = 3: MultiNest
+action = 3
 
 
 #If propose_matrix is blank (first run), can try to use numerical Hessian to 
